# Operating-systems

./: README.md
OS Projects/92-1/Project 2/Tehran Uni - Hesam/OS-CA1/OS-CA1/: CMakeLists.txt  LICENSE  Makefile  README.md
OS Projects/92-1/Project 2/Tehran Uni - Hesam/OS-CA1/OS-CA1/Client/: Client.c
OS Projects/92-1/Project 2/Tehran Uni - Hesam/OS-CA1/OS-CA1/Common/Consts/: Consts.h
OS Projects/92-1/Project 2/Tehran Uni - Hesam/OS-CA1/OS-CA1/Common/Objects/: DataObjects.c  DataObjects.h
OS Projects/92-1/Project 2/Tehran Uni - Hesam/OS-CA1/OS-CA1/Common/Utilities/: FileUtil.c  FileUtil.h  IOUtil.c  IOUtil.h  StringUtil.c  StringUtil.h
OS Projects/92-1/Project 2/Tehran Uni - Hesam/OS-CA1/OS-CA1/Server/: Server.c
OS Projects/92-2/Project 1/: Apache_web_log.txt  main.sh
OS Projects/92-2/Project 2/: DS_Project.rar  pipe-sample.c
OS Projects/dining philosopher/: hw3.cpp  out
OS Projects/pthread/: OS.txt  hw1.cpp  mySystemOutput.txt  outputOnAlirezaSystem.txt  output_farbodMachine.txt
System Programming Assignments/: 5 assignments .docx
System Programming Assignments/Milestone8/: Makefile  event_counter.c  event_counter.h  event_test.c  sema.c  sema.h  sematest.c  seq.c  seq.h  seq_test.c
XV6/OSLab-mprotect/: Makefile  asm.h  bootasm.S  defs.h  elf.h  file.h  fs.h  init.c  main.c  memlayout.h  mmu.h  mprotect-test.c  param.h  proc.h  spinlock.h  stat.h  syscall.c  syscall.h  sysproc.c  user.h  usys.S  vm.c  x86.h
XV6/OSLab-semaphore/: Makefile  defs.h  kalloc.c  main.c  semaphore.c  semaphore.h  syscall.c  syscall.h  sysproc.c  user.h  usys.S
(+46 files in other folders)
